RESOLVED FIXED207187
[WinCairo][curl][Clang] error: member access into incomplete type 'WebCore::SynchronousLoaderMessageQueue' in ~CurlRequest
https://bugs.webkit.org/show_bug.cgi?id=207187
Summary [WinCairo][curl][Clang] error: member access into incomplete type 'WebCore::S...
Fujii Hironori
Reported 2020-02-03 23:46:13 PST
[WinCairo][curl][Clang] error: member access into incomplete type 'WebCore::SynchronousLoaderMessageQueue' in ~CurlRequest clnag-cl reports the following error since r254659. > FAILED: Source/WebKitLegacy/CMakeFiles/WebKitLegacy.dir/win/WebDownloadCurl.cpp.obj > C:\PROGRA~1\LLVM\bin\clang-cl.exe /nologo -TP -DANGLE_ENABLE_D3D11 -DANGLE_ENABLE_D3D9 -DANGLE_ENABLE_ESSL -DANGLE_ENABLE_HLSL -DBUILDING_WITH_CMAKE=1 -DBUILDING_WebKitLegacy -DEGL_EGLEXT_PROTOTYPES -DEGL_EGL_PROTOTYPES=1 -DFRAMEWORK_NAME=WebKitLegacy -DGL_API="" -DGL_APICALL="" -DGL_GLES_PROTOTYPES=1 -DGL_GLEXT_PROTOTYPES -DHAVE_CONFIG_H=1 -DNOCRYPT -DNOMINMAX -DUNICODE -DUSE_CAIRO=1 -DUSE_CURL=1 -DWEBKIT_EXPORTS -DWEBKIT_EXPORTS=1 -DWINVER=0x601 -DWTF_PLATFORM_WIN_CAIRO=1 -DWebKitLegacy_EXPORTS -D_CRT_SECURE_NO_WARNINGS -D_HAS_EXCEPTIONS=0 -D_UNICODE -D_WIN32_WINNT=0x601 -D_WINDOWS -D_WINSOCKAPI_="" -I. -I..\..\Source\WebKitLegacy\Storage -I..\..\Source\WebKitLegacy\WebCoreSupport -IWebCore\PrivateHeaders -IWebKitLegacy\DerivedSources -I..\..\WebKitLibraries\win\include\cairo -I..\include\private -I..\include\private\JavaScriptCore -I..\include\private\WebCore -I..\..\Source\WebKitLegacy\win -I..\..\Source\WebKitLegacy\win\plugins -I..\..\Source\WebKitLegacy\win\WebCoreSupport -IWebKitLegacy\DerivedSources\include -IWebKitLegacy\DerivedSources\Interfaces -IJavaScriptCore\Headers -IJavaScriptCore\PrivateHeaders -IWTF\Headers -IDerivedSources -I..\..\Source\ThirdParty -IPAL\Headers -IDerivedSources\ForwardingHeaders -IANGLE\Headers -I..\..\WebKitLibraries\win\include /W4 -fdiagnostics-color=always -fcolor-diagnostics -Wno-parentheses-equality -Wno-noexcept-type -Qunused-arguments -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-unknown-argument -Wno-nonportable-include-path -Wno-unknown-pragmas -Wno-macro-redefined -Wno-undef /DWIN32 /D_WINDOWS /GR- /EHsc- -fno-strict-aliasing /MD /Zi /Ob0 /Od /RTC1 /wd4018 /wd4068 /wd4099 /wd4100 /wd4127 /wd4138 /wd4146 /wd4180 /wd4189 /wd4201 /wd4206 /wd4244 /wd4251 /wd4267 /wd4275 /wd4288 /wd4291 /wd4305 /wd4309 /wd4344 /wd4355 /wd4389 /wd4396 /wd4456 /wd4457 /wd4458 /wd4459 /wd4481 /wd4503 /wd4505 /wd4510 /wd4512 /wd4530 /wd4610 /wd4611 /wd4646 /wd4702 /wd4706 /wd4722 /wd4800 /wd4819 /wd4951 /wd4952 /wd4996 /wd6011 /wd6031 /wd6211 /wd6246 /wd6255 /wd6387 /Zi /GS /EHa- /EHc- /EHs- /fp:except- /analyze- /bigobj /utf-8 /validate-charset -fmsc-version=1911 -std:c++17 /Yu"WebKitPrefix.h" /FI"WebKitPrefix.h" /Fp"C:/webkit/gb/WebKitBuild/Debug/Source/WebKitLegacy/WebKitLegacy_SOURCES/WebKitPrefix.pch" /showIncludes /FoSource\WebKitLegacy\CMakeFiles\WebKitLegacy.dir\win\WebDownloadCurl.cpp.obj /FdSource\WebKitLegacy\CMakeFiles\WebKitLegacy.dir\ -c ..\..\Source\WebKitLegacy\win\WebDownloadCurl.cpp > In file included from ..\..\Source\WebKitLegacy\win\WebDownloadCurl.cpp:26: > In file included from ..\..\Source\WebKitLegacy\win/WebKitDLL.h:35: > In file included from WTF\Headers\wtf/HashCountedSet.h:26: > In file included from WTF\Headers\wtf/HashMap.h:25: > In file included from WTF\Headers\wtf/HashTable.h:33: > In file included from WTF\Headers\wtf/HashTraits.h:26: > In file included from WTF\Headers\wtf/HashFunctions.h:26: > WTF\Headers\wtf/RefPtr.h(44,12): error: member access into incomplete type 'WebCore::SynchronousLoaderMessageQueue' > ptr->deref(); > ^ > WTF\Headers\wtf/RefPtr.h(70,31): note: in instantiation of function template specialization 'WTF::derefIfNotNull<WebCore::SynchronousLoaderMessageQueue>' requested here > ALWAYS_INLINE ~RefPtr() { derefIfNotNull(PtrTraits::exchange(m_ptr, nullptr)); } > ^ > C:\webkit\gb\WebKitBuild\Debug\WebCore\PrivateHeaders\WebCore/CurlRequest.h(72,13): note: in instantiation of member function 'WTF::RefPtr<WebCore::SynchronousLoaderMessageQueue, WTF::DumbPtrTraits<WebCore::SynchronousLoaderMessageQueue> >::~RefPtr' requested here > virtual ~CurlRequest() = default; > ^ > C:\webkit\gb\WebKitBuild\Debug\WebCore\PrivateHeaders\WebCore/CurlRequest.h(112,31): note: in instantiation of member function 'WTF::ThreadSafeRefCounted<WebCore::CurlRequest, WTF::DestructionThread::Any>::deref' requested here > void release() override { deref(); } > ^ > C:\webkit\gb\WebKitBuild\Debug\WebCore\PrivateHeaders\WebCore/CurlRequest.h(46,7): note: forward declaration of 'WebCore::SynchronousLoaderMessageQueue' > class SynchronousLoaderMessageQueue; > ^ > 1 error generated.
Attachments
Fujii Hironori
Comment 1 2020-02-04 00:05:50 PST
Radar WebKit Bug Importer
Comment 2 2020-02-04 00:06:20 PST
Note You need to log in before you can comment on or make changes to this bug.