[WinCairo][curl][Clang] error: member access into incomplete type 'WebCore::SynchronousLoaderMessageQueue' in ~CurlRequest https://bugs.webkit.org/show_bug.cgi?id=207187

Unreviewed build fix for clang-cl builds of WinCairo port.

SynchronousLoaderMessageQueue couldn't be destructed in inlined
~CurlRequest because it's a incomplete type. Moved the dtor from
CurlRequest.h to CurlRequest.cpp.

* platform/network/curl/CurlRequest.cpp:
* platform/network/curl/CurlRequest.h:

Canonical link: https://commits.webkit.org/220183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255665 268f45cc-cd09-0410-ab3c-d52691b4dbfc